fixed a bug causing history overflow when the window is max

--- a/style.css
+++ b/style.css
@@ -263,5 +263,10 @@ START - COLORING / STYLING */
   height: 16.5rem;
 }
 
+.split #history-dump{
+  height: 16.5rem;
+}
+
+
 
 /* END - COLORING / STYLING */
